# analytics

./: .dockerignore  .gitignore  Cargo.toml  DOCKER.md  Dockerfile  QUICKSTART.md  README.md  analytics.db  docker-build.bat  docker-compose.yml  docker-down.bat  docker-entrypoint.sh  docker-logs.bat  docker-push.bat  docker-push.sh  docker-restart.bat  docker-status.bat  docker-up.bat  docker-up.sh  run-demo.sh  stop-demo.sh
agent-os/: config.yml
agent-os/commands/create-tasks/: 2-create-tasks-list.md  create-tasks.md
agent-os/commands/write-spec/: write-spec.md
agent-os/product/: mission.md  roadmap.md  tech-stack.md
docs/: API.md  nodekey-registry.md  returns-design.md  volatility-design.md
examples/: create_demo_data.rs  download_demo_data.rs  pull_mode_multi_asset.rs  pull_mode_query.rs  pull_mode_returns.rs  pull_mode_volatility.rs  push_mode_returns.rs  push_mode_volatility.rs  replay_live_analytics.rs  replay_multi_asset.rs  replay_volatility.rs
frontend/: .dockerignore  Dockerfile  README.md  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
src/: analytics.rs  asset.rs  asset_key.rs  dag.rs  equity.rs  future.rs  integration_tests.rs  lib.rs  push_mode.rs  replay.rs  sqlite_provider.rs  time_series.rs  yahoo_finance.rs
src/analytics/: README.md  calculators.rs  containers.rs  lag.rs  primitives.rs  registry.rs  testing.rs  windows.rs
src/dag/: README.md  core.rs  types.rs  visualization.rs
src/server/: error.rs  handlers.rs  mod.rs  routes.rs  state.rs
tests/: registry.rs  run_demo_regression.rs
(+72 files in other folders)
