[package]
name = "analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
csv = "1.3"
log = "0.4"
daggy = "0.8"

[dev-dependencies]
env_logger = "0.11"
petgraph = "0.6"  # For evaluation tests only - daggy selected for implementation

