[package]
name = "analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
csv = "1.3"
log = "0.4"
async-stream = "0.3"
futures = "0.3"
daggy = "0.8"
axum = "0.7"
tower-http = { version = "0.5", features = ["trace", "cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ordered-float = "3.0"
rayon = "1.8" # Added for parallel execution in pull-mode

[dev-dependencies]
env_logger = "0.11"
petgraph = "0.6"  # For evaluation tests only - daggy selected for implementation

